src/components/footer.css
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 75px;
  margin: 0px 0px 0px 5px;
  padding: 0;
  padding-top: 10px;
  z-index: 1;
  background-image: linear-gradient(to top, #141414, rgba(20,20,20,0.8), rgba(255,0,0,0));
  list-style-type: none;
}

.footer p {
  float: right;
  padding-right: 30px; 
  font-size: 14px;
  text-align: right;
  color: darkgray;
}

